# doko

./: .env.example  .gitignore  Cargo.toml  DEMO_RESULTS.md  MILESTONE1_COMPLETE.md  NOSTR_PREDICTION_MARKET_STATUS.md  README.md  STATUS.md  TEST_REPORT.md  TEST_REPORT_FIXED.md  WASM_ANALYSIS_REPORT.md  auto_vault.json  create_doko_webapp_instructions.md  create_valid_descriptors.py  demo.md  descriptors.json  fix_keys.py  flakiness.md  import_descriptors.sh  import_keys.py  import_wallet.sh  markstr_plan.md  nostr_based_prediction_market_csfs_bitcoin.md  poc_explainer.md  prompt.md  stress_test_hybrid.sh  taproot_vault.json  testnet_keys.json  valid_descriptors.json  vault_plan.json  witness_program_hash_mistmatch_context.md
app/: index.html  package-lock.json  package.json  vite.config.js
app/src/: App.jsx  index.css  main.jsx
app/src/components/Dashboard/: Overview.jsx
app/src/components/Layout/: Header.jsx  Sidebar.jsx
app/src/components/Transactions/: TransactionBuilder.jsx  TransactionHistory.jsx
app/src/components/UI/: Button.jsx
app/src/components/Vault/: VaultDeposit.jsx  VaultManager.jsx  VaultWithdraw.jsx
app/src/context/: BitcoinContext.jsx  VaultContext.jsx
app/src/hooks/: useLocalStorage.js
app/src/lib/bitcoin/: index.js  rpc.js  transaction.js  wallet.js
app/src/lib/storage/: vault.js
app/src/lib/taproot/: index.js
apps/markstr/src/context/: BitcoinContext.jsx  MarketContext.jsx  NostrContext.jsx  RoleContext.jsx
apps/vault/: tailwind.config.js
apps/vault/src/components/Settings/: Settings.jsx
apps/vault/src/components/Transactions/: TransactionHistory.jsx
apps/vault/src/components/Vault/: VaultCreator.jsx  VaultDashboard.jsx
apps/vault/src/components/Wallet/: WalletManager.jsx
apps/vault/src/context/: VaultContext.jsx
apps/vault/src/lib/bitcoin/: explorer.js  multisig.js  rpc.js
apps/vault/src/lib/crypto/: encryption.js
doko-wasm/: Cargo.toml  README.md  test.html
doko-wasm/src/: lib.rs
misc/recovery/: WALLET_RECOVERY.md  create_descriptors.py  derive_keys.py  import_valid_descriptors.sh  taproot_vault.json  vault_plan.json
src/: advanced_tui.rs  advanced_vault.rs  config.rs  csfs_primitives.rs  csfs_test.rs  ctv.rs  demo_prediction_market.rs  error.rs  explorer_client.rs  lib.rs  main.rs  rpc_client.rs  taproot_vault.rs  tx_decoder.rs  ui.rs  utils.rs  vault.rs
src/prediction_markets/: mod.rs  nostr.rs  tests.rs
src/services/: explorer_client.rs  mod.rs  prediction_market_service.rs  rpc_client.rs
src/tui/: advanced.rs  hybrid.rs  mod.rs  simple.rs
src/vaults/: advanced.rs  hybrid.rs  mod.rs  nostr.rs  simple.rs
