[package]
name = "doko"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.31"
bitcoincore-rpc = "0.18"
secp256k1 = { version = "0.28", features = ["rand-std"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
bech32 = "0.9"
rand = "0.8"