[package]
name = "doko"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bitcoin = "0.31.1"
bitcoincore-rpc = "0.18.0"
clap = { version = "4.4.18", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
secp256k1 = { version = "0.28", features = ["rand-std"] }
sha2 = "0.10.8"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.27"
ratatui = "0.25"
chrono = "0.4"
arboard = "3.2"
webbrowser = "0.8"
