[package]
name = "bitcoin-doko"
version = "0.1.0"
edition = "2021"
authors = ["@AbdelStark"]
description = "Bitcoin vault implementation with CTV covenants and CSFS delegation for enhanced custody security"
license = "MIT"
repository = "https://github.com/AbdelStark/doko"
homepage = "https://github.com/AbdelStark/doko"
documentation = "https://docs.rs/bitcoin-doko"
readme = "README.md"
keywords = ["bitcoin", "vault", "covenant", "ctv", "csfs"]
categories = ["cryptography", "command-line-utilities"]
exclude = [
    "target/",
    ".git/",
    ".gitignore",
    "*.log",
    "*.tmp",
    ".env*",
    "screenshots/",
    "docs/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core Bitcoin functionality
bitcoin = "0.32"
bitcoincore-rpc = "0.19"
sha2 = "0.10"
hex = "0.4"

# Nostr functionality
nostr = "0.39.0"

# CLI and TUI
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6.0"
dotenv = "0.15"
lazy_static = "1.4"
rand = "0.9"

# Network requests
reqwest = { version = "0.12", features = ["json"] }

# System integration
arboard = "3.2"
webbrowser = "1.0"

[dev-dependencies]
# Add testing dependencies when needed

[[bin]]
name = "doko"
path = "src/main.rs"

[[bin]]
name = "nostr_market"
path = "bin/nostr_market.rs"

[[bin]]
name = "demo_prediction_market"
path = "bin/demo_prediction_market.rs"
